Fixing layout problems

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -5,7 +5,7 @@ code, textarea
   font-size: .75rem
 
 #json
-  height: 100%
+  height: calc(100% - 55px)
   overflow: auto
 
 main
@@ -45,13 +45,10 @@ pre
 
 code
   display: block
-  overflow: scroll
   height: calc(100% - 57px)
   padding: 15px
-  overflow: scroll
   background:#FFF;
   color:#333;
-  overflow-x:auto;
 
 .grab
   height: 50px
